Add the datatype channel example

--- a/datatype-channel/DataType-Channel/Greeting/pom.xml
+++ b/datatype-channel/DataType-Channel/Greeting/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.goparamore</groupId>
-        <artifactId>Point-To-Point</artifactId>
+        <artifactId>DataType-Channel</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>SimpleMessaging</artifactId>
+    <artifactId>Greeting</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -19,20 +19,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>5.16.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.36</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.36</version>
-            <scope>test</scope>
+            <groupId>io.goparamore</groupId>
+            <artifactId>SimpleMessaging</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
