--- a/datatype-channel/DataType-Channel/Receiver/pom.xml
+++ b/datatype-channel/DataType-Channel/Receiver/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.goparamore</groupId>
-        <artifactId>Point-To-Point</artifactId>
+        <artifactId>DataType-Channel</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>SimpleMessaging</artifactId>
+    <artifactId>Receiver</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -18,6 +18,16 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.goparamore</groupId>
+            <artifactId>SimpleMessaging</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.goparamore</groupId>
+            <artifactId>Greeting</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
@@ -33,6 +43,22 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
