--- a/datatype-channel/DataType-Channel/SimpleMessaging/pom.xml
+++ b/datatype-channel/DataType-Channel/SimpleMessaging/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.goparamore</groupId>
-        <artifactId>Point-To-Point</artifactId>
+        <artifactId>DataType-Channel</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
