--- a/invalid-message-channel/Invalid-Message-Channel/SimpleMessaging/pom.xml
+++ b/invalid-message-channel/Invalid-Message-Channel/SimpleMessaging/pom.xml
@@ -4,13 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.example</groupId>
+        <groupId>io.goparamore</groupId>
         <artifactId>Invalid-Message-Channel</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.goparamore</groupId>
     <artifactId>SimpleMessaging</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
