--- a/polling-consumer/Polling-Consumer/Receiver/pom.xml
+++ b/polling-consumer/Polling-Consumer/Receiver/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.goparamore</groupId>
-        <artifactId>DataType-Channel</artifactId>
+        <artifactId>Polling-Consumer</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>Sender</artifactId>
+    <artifactId>Receiver</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>io.goparamore</groupId>
-            <artifactId>Greeting</artifactId>
+            <artifactId>Greetings</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -53,6 +53,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.3.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
