--- a/datatype-channel/DataType-Channel/pom.xml
+++ b/datatype-channel/DataType-Channel/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>SimpleMessaging</module>
         <module>Sender</module>
-        <module>greeting.Greeting</module>
+        <module>Greeting</module>
         <module>Receiver</module>
     </modules>
 
