--- a/polling-consumer/Polling-Consumer/pom.xml
+++ b/polling-consumer/Polling-Consumer/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.goparamore</groupId>
-    <artifactId>Polling-Consumer</artifactId>
+    <artifactId>Polling-receiver.Consumer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
