--- a/request-reply/Request-Reply/pom.xml
+++ b/request-reply/Request-Reply/pom.xml
@@ -12,6 +12,7 @@
         <module>SimpleMessaging</module>
         <module>Greetings</module>
         <module>Sender</module>
+        <module>Receiver</module>
     </modules>
 
     <properties>
