--- a/polling-consumer/Polling-Consumer/Receiver/pom.xml
+++ b/polling-consumer/Polling-Consumer/Receiver/pom.xml
@@ -60,6 +60,18 @@
             <version>2.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.goparamore</groupId>
+            <artifactId>Greetings</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.goparamore</groupId>
+            <artifactId>Greetings</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
