Kafka docker files

--- a/pub-sub-stream/Pub-Sub-Stream/Docker/arm/docker-compose.yaml
+++ b/pub-sub-stream/Pub-Sub-Stream/Docker/arm/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - 9997:9997
     environment:
       KAFKA_BROKER_ID: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka0:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
